--- a/style.scss
+++ b/style.scss
@@ -124,6 +124,7 @@ section{
         }
         i{
             float: right;
+            color:#fff;
             display: none !important;
         }
 
